fix(todo): list endpoint filtering
