# apps/todo/docs/openapi.yaml
@@ -115,7 +115,7 @@ components:
           $ref: '#/components/schemas/TodoStatus'
     TodoDueAtAfter:
       x-go-name: TodoDueAtAfterParam
-      name: statuses
+      name: dueAtAfter
       in: query
       schema:
         $ref: '#/components/schemas/DateTime'
@@ -216,7 +216,7 @@ components:
         - Completed
     DateTime:
       type: string
-      example: 2006-01-02T15:04:05-07:00
+      example: 2046-01-01T00:00:00Z
       description: String in ISO 8601 format
     NotFoundError:
       type: object
